filter to get list
